# openapi/ontology.yaml
@@ -86,6 +86,20 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/Ontology"
+    delete:
+      tags:
+        - Ontology
+      summary: Delete an Ontology
+      operationId: deleteOntology
+      parameters:
+        - in: path
+          name: ontologyId
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: Deleted Ontology
   "/v1/ontologies/{ontologyId}/object-types":
     get:
       tags:
